// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectStatus ObjectStatus: state: Error 1`] = `
<div
  class="Component-objectStatus-"
>
  <div
    class="Component-icon- Component-iconError-"
  >
    <ui5-icon
      class=""
      src="status-negative"
      style="font-size: 1rem;"
    />
  </div>
</div>
`;

exports[`ObjectStatus ObjectStatus: state: Information 1`] = `
<div
  class="Component-objectStatus-"
>
  <div
    class="Component-icon- Component-iconInformation-"
  >
    <ui5-icon
      class=""
      src="hint"
      style="font-size: 1rem;"
    />
  </div>
</div>
`;

exports[`ObjectStatus ObjectStatus: state: None 1`] = `
<div
  class="Component-objectStatus-"
>
  <div
    class="Component-icon- Component-iconNone-"
  >
    <ui5-icon
      class=""
      src="status-inactive"
      style="font-size: 1rem;"
    />
  </div>
</div>
`;

exports[`ObjectStatus ObjectStatus: state: Success 1`] = `
<div
  class="Component-objectStatus-"
>
  <div
    class="Component-icon- Component-iconSuccess-"
  >
    <ui5-icon
      class=""
      src="status-positive"
      style="font-size: 1rem;"
    />
  </div>
</div>
`;

exports[`ObjectStatus ObjectStatus: state: Warning 1`] = `
<div
  class="Component-objectStatus-"
>
  <div
    class="Component-icon- Component-iconWarning-"
  >
    <ui5-icon
      class=""
      src="status-critical"
      style="font-size: 1rem;"
    />
  </div>
</div>
`;

exports[`ObjectStatus Render without Crashing 1`] = `
<div
  class="Component-objectStatus-"
>
  <div
    class="Component-icon- Component-iconError-"
  >
    <ui5-icon
      class=""
      src="status-negative"
      style="font-size: 1rem;"
    />
  </div>
  <span
    class="Component-textError-"
  >
    Hello
  </span>
</div>
`;

exports[`ObjectStatus Text Deprecation 1`] = `
<div
  class="Component-objectStatus-"
>
  <div
    class="Component-icon- Component-iconError-"
  >
    <ui5-icon
      class=""
      src="status-negative"
      style="font-size: 1rem;"
    />
  </div>
  <span
    class="Component-textError-"
  >
    Hello
  </span>
</div>
`;
